--- a/manifest.json
+++ b/manifest.json
@@ -5,17 +5,17 @@
     "version": "1.0",
     "browser_action": {
         "default_icon": "pendo_target.png",
-        "default_popup": "popup.html",
         "default_title": "Pendo Tagging Aid"
     },
-    "content_scripts": [{
-        "matches": ["<all_urls>"],
-        "all_frames": true,
-        "js":      ["scripts/content.js"]
-    }],
     "permissions": [
-        "activeTab"
+        "activeTab",
+        "storage"
     ],
+    "web_accessible_resources": [
+        "src/*"
+    ],
+    "background": {
+        "scripts": ["js/background.js"]
+    },
     "content_security_policy": "script-src 'self' https://www.gstatic.com/; object-src 'self'"
 }
-
