--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,17 @@
 {
-    "manifest_version": 2,
     "name": "Pendo Tagging Aid",
-    "description": "This extension lets you see what ids, classes, and attributes are in the DOM",
+    "short_name": "PendoTA",
     "version": "1.0",
+    "manifest_version": 2,
+    "description": "This extension lets you see what ids, classes, and attributes are in the DOM",
+    "homepage_url": "http://pendo.io",
+    "icons": {
+        "16": "src/ui/images/pendo_target_16.png",
+        "48": "src/ui/images/pendo_target_48.png",
+        "128": "src/ui/images/pendo_target_128.png"
+    },
     "browser_action": {
-        "default_icon": "./src/ui/images/pendo_target.png",
+        "default_icon": "src/ui/images/pendo_target_48.png",
         "default_title": "Pendo Tagging Aid"
     },
     "permissions": [
@@ -16,6 +23,5 @@
     ],
     "background": {
         "scripts": ["js/background.js"]
-    },
-    "content_security_policy": "script-src 'self' https://www.gstatic.com/; object-src 'self'"
+    }
 }
