--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Pendo Tagging Aid",
     "short_name": "PendoTA",
-    "version": "1.2",
+    "version": "1.3",
     "manifest_version": 2,
     "description": "See what ids, classes, and elements are in the DOM. Enhance your feature tagging experience within the Pendo Product Cloud.",
     "homepage_url": "http://pendo.io",
@@ -12,7 +12,8 @@
     },
     "browser_action": {
         "default_icon": "src/ui/images/pendo_target_48.png",
-        "default_title": "Pendo Tagging Aid"
+        "default_title": "Pendo Tagging Aid",
+        "default_popup": "src/ui/popup.html"
     },
     "permissions": [
         "activeTab",
